fleshed out the pages for homepage, dogs page, blog page, and checkout page. Added minor CSS to give a little distinction of sections. Still have a few things to add before submitting assignment

--- a/dog-page.html
+++ b/dog-page.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css">
-    <title>Adopt-a-Dog Homepage</title>
+    <title>Adopt-a-Dog - Dogs</title>
   </head>
   <body>
     <header>
       <img class="adoptadog-logo-header" src="images/adoptadog-logo.svg" alt="adopt a dog logo">
       <h2>Seattle's premiere dog adoption agency</h2>
       <aside>
-        <nav>checkout cart and <button><a href="checkout-page.html">Checkout</a></button></nav>
+        <nav>checkout cart and <button>Checkout</button></nav>
       </aside>
     </header>
       <nav>
@@ -22,16 +22,7 @@
         </ul>
       </nav>
     <main>
-      <article>
-        <img src="images/home-intro.jpg" alt="Article image">
-        <h2>Adopt-A-Dog</h2>
-        <p>
-          My sister likes to eat cheese on her peanut butter sandwich and
-          pickles on her ice cream. The tape was so sticky that, when it got
-          stuck to my eyebrows, it wouldn't come off. He's a bit tipsy.
-        </p>
-      </article>
-      <section>
+        <h2>Here are all of our Dogs!</h2>
 
         <article>
           <img src="images/angus-card.jpg" alt="missing image">
@@ -113,11 +104,50 @@
           </p>
           <button>Adopt</button>
         </article>
+        <article>
+          <img src="images/piper-card.jpg" alt="missing image">
+          <h3>Name of dog</h3>
+          <p>Cost to adopt: $123.45</p>
+          <p>
+            This dog smells like goat cheese and fresh pineapples. Do you think
+            this is the one? Adopt this dog now!
+          </p>
+          <button>Adopt</button>
+        </article>
+        <article>
+          <img src="images/poppy-card.jpg" alt="missing image">
+          <h3>Name of dog</h3>
+          <p>Cost to adopt: $123.45</p>
+          <p>
+            This dog smells like goat cheese and fresh pineapples. Do you think
+            this is the one? Adopt this dog now!
+          </p>
+          <button>Adopt</button>
+        </article>
+        <article>
+          <img src="images/stella-card.jpg" alt="missing image">
+          <h3>Name of dog</h3>
+          <p>Cost to adopt: $123.45</p>
+          <p>
+            This dog smells like goat cheese and fresh pineapples. Do you think
+            this is the one? Adopt this dog now!
+          </p>
+          <button>Adopt</button>
+        </article>
+        <article>
+          <img src="images/violet-card.jpg" alt="missing image">
+          <h3>Name of dog</h3>
+          <p>Cost to adopt: $123.45</p>
+          <p>
+            This dog smells like goat cheese and fresh pineapples. Do you think
+            this is the one? Adopt this dog now!
+          </p>
+          <button>Adopt</button>
+        </article>
 
-      </section>
     </main>
     <footer>
-      <img class="adoptadog-logo-footer" src="images/adoptadog-logo.svg" alt="adopt a dog logo">
+      <img src="images/adoptadog-logo.svg" alt="adopt a dog logo">
       <p>
         Random paragraph of meaningless information to be added below the name
         and logo in footer.
@@ -130,4 +160,3 @@
       <address>address info</address>
     </footer>
   </body>
-</html>
