added README file

--- a/dog-page.html
+++ b/dog-page.html
@@ -147,7 +147,7 @@
 
     </main>
     <footer>
-      <img src="images/adoptadog-logo.svg" alt="adopt a dog logo">
+      <img class="adoptadog-logo-footer" src="images/adoptadog-logo.svg" alt="adopt a dog logo">
       <p>
         Random paragraph of meaningless information to be added below the name
         and logo in footer.
