--- a/blog-page.html
+++ b/blog-page.html
@@ -7,13 +7,11 @@
     <title>Adopt-a-Dog Blog</title>
   </head>
   <body>
-    <header>
-      <img class="adoptadog-logo-header" src="images/adoptadog-logo.svg" alt="adopt a dog logo">
-      <h2>Seattle's premiere dog adoption agency</h2>
-      <aside>
-        <nav>checkout cart and <button>Checkout</button></nav>
-      </aside>
-    </header>
+    <header class="header-banner">
+      <div>
+        <img class="adoptadog-logo-header" src="images/adoptadog-logo.svg" alt="adopt a dog logo">
+        <h2>Seattle's premiere dog adoption agency</h2>
+      </div>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -21,58 +19,71 @@
           <li><a href="blog-page.html">Blog</a></li>
         </ul>
       </nav>
+      <aside>
+        <nav>
+          <img class="cart-icon" src="images/cart-icon.svg" alt="cart icon"> 
+          <form  action="checkout-page.html">
+            <input class="checkout-button" type="submit" value="Checkout">
+          </form>
+        </nav>
+      </aside>
+    </header>
     <main>
         <h2>Adopt-a-Dog Blog</h2>
-
-        <article>
-          <img src="images/blog-1.jpg" alt="missing image">
-          <h3>Traveling With Your Dog</h3>
-          <p>
-            I fell in the mud as I was walking home from school today.
-            I wanted to flirt with the barista, but suddenly, I couldn't find my tongue.
-            I like blueberries and mangoes but not strawberries.
-            Suddenly from under the stove there came a squeak.
-          </p>
-          <p>
-            I didn't know what to wear to my best friend's funeral.
-            I'm taking a little road trip to Oklahoma City this morning.
-            Tom realized he could be making a big mistake.
-            He had a dream so real that he woke screaming.
-          </p>
+        <article class="blog-container">
+          <img class="blog-photo" src="images/blog-1.jpg" alt="back of black dog and human sitting on the edge of the grand canyon">
+          <div class="blog-text-box">  
+            <h3>Traveling With Your Dog</h3>
+            <p>
+              I fell in the mud as I was walking home from school today.
+              I wanted to flirt with the barista, but suddenly, I couldn't find my tongue.
+              I like blueberries and mangoes but not strawberries.
+              Suddenly from under the stove there came a squeak.
+            </p>
+            <p>
+              I didn't know what to wear to my best friend's funeral.
+              I'm taking a little road trip to Oklahoma City this morning.
+              Tom realized he could be making a big mistake.
+              He had a dream so real that he woke screaming.
+            </p>
+          </div>
         </article>
-        <article>
-          <img src="images/blog-2.jpg" alt="missing image">
-          <h3>Traveling With Your Dog</h3>
-          <p>
-            I fell in the mud as I was walking home from school today.
-            I wanted to flirt with the barista, but suddenly, I couldn't find my tongue.
-            I like blueberries and mangoes but not strawberries.
-            Suddenly from under the stove there came a squeak.
-          </p>
-          <p>
-            I didn't know what to wear to my best friend's funeral.
-            I'm taking a little road trip to Oklahoma City this morning.
-            Tom realized he could be making a big mistake.
-            He had a dream so real that he woke screaming.
-          </p>
+        <article class="blog-container">
+          <img class="blog-photo" src="images/blog-2.jpg" alt="missing image">
+          <div class="blog-text-box">  
+            <h3>How To Walk Multiple Dogs</h3>
+            <p>
+              I fell in the mud as I was walking home from school today.
+              I wanted to flirt with the barista, but suddenly, I couldn't find my tongue.
+              I like blueberries and mangoes but not strawberries.
+              Suddenly from under the stove there came a squeak.
+            </p>
+            <p>
+              I didn't know what to wear to my best friend's funeral.
+              I'm taking a little road trip to Oklahoma City this morning.
+              Tom realized he could be making a big mistake.
+              He had a dream so real that he woke screaming.
+            </p>
+          </div>
         </article>
-        <article>
-          <img src="images/blog-3.jpg" alt="missing image">
-          <h3>Teach Your Dog To Fetch</h3>
-          <p>
-            I fell in the mud as I was walking home from school today.
-            I wanted to flirt with the barista, but suddenly, I couldn't find my tongue.
-            I like blueberries and mangoes but not strawberries.
-            Suddenly from under the stove there came a squeak.
-          </p>
-          <p>
-            I didn't know what to wear to my best friend's funeral.
-            I'm taking a little road trip to Oklahoma City this morning.
-            Tom realized he could be making a big mistake.
-            He had a dream so real that he woke screaming.
-          </p>
+        <article class="blog-container">
+          <img class="blog-photo" src="images/blog-3.jpg" alt="missing image">
+          <div class="blog-text-box">   
+            <h3>Teach Your Dog To Fetch</h3>
+            <p>
+              I fell in the mud as I was walking home from school today.
+              I wanted to flirt with the barista, but suddenly, I couldn't find my tongue.
+              I like blueberries and mangoes but not strawberries.
+              Suddenly from under the stove there came a squeak.
+            </p>
+            <p>
+              I didn't know what to wear to my best friend's funeral.
+              I'm taking a little road trip to Oklahoma City this morning.
+              Tom realized he could be making a big mistake.
+              He had a dream so real that he woke screaming.
+            </p>
+          </div>
         </article>
-
     </main>
     <footer>
       <img class="adoptadog-logo-footer" src="images/adoptadog-logo.svg" alt="adopt a dog logo">
@@ -81,9 +92,11 @@
         and logo in footer.
       </p>
       <nav>
-        <li>Home</li>
-        <li>Dogs</li>
-        <li>Blog</li>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="dog-page.html">Dogs</a></li>
+          <li><a href="blog-page.html">Blog</a></li>
+        </ul>
       </nav>
       <address>address info</address>
     </footer>
