--- a/index.html
+++ b/index.html
@@ -7,34 +7,42 @@
     <title>Adopt-a-Dog Homepage</title>
   </head>
   <body>
-    <header>
-      <img class="adoptadog-logo-header" src="images/adoptadog-logo.svg" alt="adopt a dog logo">
-      <h2>Seattle's premiere dog adoption agency</h2>
-      <aside>
-        <nav>checkout cart and <button><a href="checkout-page.html">Checkout</a></button></nav>
-      </aside>
-    </header>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="dog-page.html">Dogs</a></li>
-          <li><a href="blog-page.html">Blog</a></li>
-        </ul>
-      </nav>
+      <header class="header-banner">
+        <div>
+          <img class="adoptadog-logo-header" src="images/adoptadog-logo.svg" alt="adopt a dog logo">
+          <h2>Seattle's premiere dog adoption agency</h2>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="dog-page.html">Dogs</a></li>
+            <li><a href="blog-page.html">Blog</a></li>
+          </ul>
+        </nav>
+        <aside>
+          <nav>
+            <img class="cart-icon" src="images/cart-icon.svg" alt="cart icon"> 
+            <form  action="checkout-page.html">
+              <input class="checkout-button" type="submit" value="Checkout">
+            </form>
+          </nav>
+        </aside>
+      </header>
     <main>
-      <article>
-        <img src="images/home-intro.jpg" alt="Article image">
-        <h2>Adopt-A-Dog</h2>
-        <p>
-          My sister likes to eat cheese on her peanut butter sandwich and
-          pickles on her ice cream. The tape was so sticky that, when it got
-          stuck to my eyebrows, it wouldn't come off. He's a bit tipsy.
-        </p>
+      <article class="intro-container">
+        <img class="intro-photo" src="images/home-intro.jpg" alt="Article image">
+        <div>
+          <h2>Adopt-A-Dog</h2>
+          <p>
+            My sister likes to eat cheese on her peanut butter sandwich and
+            pickles on her ice cream. The tape was so sticky that, when it got
+            stuck to my eyebrows, it wouldn't come off. He's a bit tipsy.
+          </p>
+        </div>
       </article>
-      <section>
-
-        <article>
-          <img src="images/angus-card.jpg" alt="missing image">
+      <div class="dog-list-container">
+        <article class="dog-box">
+          <img class="dog-profile-photo" src="images/angus-card.jpg" alt="missing image">
           <h3>Name of dog</h3>
           <p>Cost to adopt: $123.45</p>
           <p>
@@ -43,8 +51,8 @@
           </p>
           <button>Adopt</button>
         </article>
-        <article>
-          <img src="images/duffy-card.jpg" alt="missing image">
+        <article class="dog-box">
+          <img class="dog-profile-photo" src="images/duffy-card.jpg" alt="missing image">
           <h3>Name of dog</h3>
           <p>Cost to adopt: $123.45</p>
           <p>
@@ -53,8 +61,8 @@
           </p>
           <button>Adopt</button>
         </article>
-        <article>
-          <img src="images/jack-card.jpg" alt="missing image">
+        <article class="dog-box">
+          <img class="dog-profile-photo" src="images/jack-card.jpg" alt="missing image">
           <h3>Name of dog</h3>
           <p>Cost to adopt: $123.45</p>
           <p>
@@ -63,8 +71,8 @@
           </p>
           <button>Adopt</button>
         </article>
-        <article>
-          <img src="images/jake-card.jpg" alt="missing image">
+        <article class="dog-box">
+          <img class="dog-profile-photo" src="images/jake-card.jpg" alt="missing image">
           <h3>Name of dog</h3>
           <p>Cost to adopt: $123.45</p>
           <p>
@@ -73,8 +81,8 @@
           </p>
           <button>Adopt</button>
         </article>
-        <article>
-          <img src="images/lucas-card.jpg" alt="missing image">
+        <article class="dog-box">
+          <img class="dog-profile-photo" src="images/lucas-card.jpg" alt="missing image">
           <h3>Name of dog</h3>
           <p>Cost to adopt: $123.45</p>
           <p>
@@ -83,8 +91,8 @@
           </p>
           <button>Adopt</button>
         </article>
-        <article>
-          <img src="images/luna-card.jpg" alt="missing image">
+        <article class="dog-box">
+          <img class="dog-profile-photo" src="images/luna-card.jpg" alt="missing image">
           <h3>Name of dog</h3>
           <p>Cost to adopt: $123.45</p>
           <p>
@@ -93,8 +101,8 @@
           </p>
           <button>Adopt</button>
         </article>
-        <article>
-          <img src="images/maximus-card.jpg" alt="missing image">
+        <article class="dog-box">
+          <img class="dog-profile-photo" src="images/maximus-card.jpg" alt="missing image">
           <h3>Name of dog</h3>
           <p>Cost to adopt: $123.45</p>
           <p>
@@ -103,8 +111,8 @@
           </p>
           <button>Adopt</button>
         </article>
-        <article>
-          <img src="images/murphy-card.jpg" alt="missing image">
+        <article class="dog-box">
+          <img class="dog-profile-photo" src="images/murphy-card.jpg" alt="missing image">
           <h3>Name of dog</h3>
           <p>Cost to adopt: $123.45</p>
           <p>
@@ -113,8 +121,7 @@
           </p>
           <button>Adopt</button>
         </article>
-
-      </section>
+      </div>
     </main>
     <footer>
       <img class="adoptadog-logo-footer" src="images/adoptadog-logo.svg" alt="adopt a dog logo">
@@ -123,9 +130,11 @@
         and logo in footer.
       </p>
       <nav>
-        <li>Home</li>
-        <li>Dogs</li>
-        <li>Blog</li>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="dog-page.html">Dogs</a></li>
+          <li><a href="blog-page.html">Blog</a></li>
+        </ul>
       </nav>
       <address>address info</address>
     </footer>
