adding more CSS to adopt-a-dog website. Assignment 03 complete.

--- a/dog-page.html
+++ b/dog-page.html
@@ -12,15 +12,8 @@
         <img class="adoptadog-logo-header" src="images/adoptadog-logo.svg" alt="adopt a dog logo">
         <h2>Seattle's premiere dog adoption agency</h2>
       </div>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="dog-page.html">Dogs</a></li>
-          <li><a href="blog-page.html">Blog</a></li>
-        </ul>
-      </nav>
       <aside>
-        <nav>
+        <nav class="cart">
           <img class="cart-icon" src="images/cart-icon.svg" alt="cart icon"> 
           <form  action="checkout-page.html">
             <input class="checkout-button" type="submit" value="Checkout">
@@ -28,6 +21,13 @@
         </nav>
       </aside>
     </header>
+    <nav class="main-nav-container">
+      <ul class="main-nav">
+        <li><a href="index.html">Home</a></li>/
+        <li><a href="dog-page.html">Dogs</a></li>/
+        <li><a href="blog-page.html">Blog</a></li>
+      </ul>
+    </nav>
     <main>
         <h2>Here are all of our Dogs!</h2>
         <div class="dog-list-container">
