added javascript functions to alert when clicking imgs and buttons, and to add the total in an alert on the page.

--- a/index.html
+++ b/index.html
@@ -44,83 +44,83 @@
       <div class="dog-list-container">
         <article class="dog-box">
           <img class="dog-profile-photo" src="images/angus-card.jpg" alt="missing image">
-          <h3>Name of dog</h3>
-          <p>Cost to adopt: $123.45</p>
+          <h3 class="dog-name">Angus</h3>
+          <p class="adopt-fees">Cost to adopt: $123.45</p>
           <p>
             This dog smells like goat cheese and fresh pineapples. Do you think
             this is the one? Adopt this dog now!
           </p>
-          <button>Adopt</button>
+          <button class="adopt-button">Adopt</button>
         </article>
         <article class="dog-box">
           <img class="dog-profile-photo" src="images/duffy-card.jpg" alt="missing image">
-          <h3>Name of dog</h3>
-          <p>Cost to adopt: $123.45</p>
+          <h3 class="dog-name">Duffy</h3>
+          <p class="adopt-fees">Cost to adopt: $123.45</p>
           <p>
             This dog smells like goat cheese and fresh pineapples. Do you think
             this is the one? Adopt this dog now!
           </p>
-          <button>Adopt</button>
+          <button class="adopt-button">Adopt</button>
         </article>
         <article class="dog-box">
           <img class="dog-profile-photo" src="images/jack-card.jpg" alt="missing image">
-          <h3>Name of dog</h3>
-          <p>Cost to adopt: $123.45</p>
+          <h3 class="dog-name">Jack</h3>
+          <p class="adopt-fees">Cost to adopt: $123.45</p>
           <p>
             This dog smells like goat cheese and fresh pineapples. Do you think
             this is the one? Adopt this dog now!
           </p>
-          <button>Adopt</button>
+          <button class="adopt-button">Adopt</button>
         </article>
         <article class="dog-box">
           <img class="dog-profile-photo" src="images/jake-card.jpg" alt="missing image">
-          <h3>Name of dog</h3>
-          <p>Cost to adopt: $123.45</p>
+          <h3 class="dog-name">Jake</h3>
+          <p class="adopt-fees">Cost to adopt: $123.45</p>
           <p>
             This dog smells like goat cheese and fresh pineapples. Do you think
             this is the one? Adopt this dog now!
           </p>
-          <button>Adopt</button>
+          <button class="adopt-button">Adopt</button>
         </article>
         <article class="dog-box">
           <img class="dog-profile-photo" src="images/lucas-card.jpg" alt="missing image">
-          <h3>Name of dog</h3>
-          <p>Cost to adopt: $123.45</p>
+          <h3 class="dog-name">Lucas</h3>
+          <p class="adopt-fees">Cost to adopt: $123.45</p>
           <p>
             This dog smells like goat cheese and fresh pineapples. Do you think
             this is the one? Adopt this dog now!
           </p>
-          <button>Adopt</button>
+          <button class="adopt-button">Adopt</button>
         </article>
         <article class="dog-box">
           <img class="dog-profile-photo" src="images/luna-card.jpg" alt="missing image">
-          <h3>Name of dog</h3>
-          <p>Cost to adopt: $123.45</p>
+          <h3 class="dog-name">Luna</h3>
+          <p class="adopt-fees">Cost to adopt: $123.45</p>
           <p>
             This dog smells like goat cheese and fresh pineapples. Do you think
             this is the one? Adopt this dog now!
           </p>
-          <button>Adopt</button>
+          <button class="adopt-button">Adopt</button>
         </article>
         <article class="dog-box">
           <img class="dog-profile-photo" src="images/maximus-card.jpg" alt="missing image">
-          <h3>Name of dog</h3>
-          <p>Cost to adopt: $123.45</p>
+          <h3 class="dog-name">Maximus</h3>
+          <p class="adopt-fees">Cost to adopt: $123.45</p>
           <p>
             This dog smells like goat cheese and fresh pineapples. Do you think
             this is the one? Adopt this dog now!
           </p>
-          <button>Adopt</button>
+          <button class="adopt-button">Adopt</button>
         </article>
         <article class="dog-box">
           <img class="dog-profile-photo" src="images/murphy-card.jpg" alt="missing image">
-          <h3>Name of dog</h3>
-          <p>Cost to adopt: $123.45</p>
+          <h3 class="dog-name">Murphy</h3>
+          <p class="adopt-fees">Cost to adopt: $123.45</p>
           <p>
             This dog smells like goat cheese and fresh pineapples. Do you think
             this is the one? Adopt this dog now!
           </p>
-          <button>Adopt</button>
+          <button class="adopt-button">Adopt</button>
         </article>
       </div>
     </main>
@@ -140,5 +140,6 @@
       </nav>
       <address>address info</address>
     </footer>
+    <script src="js/adopt-a-dog.js" charset="UTF-8"></script>
   </body>
 </html>
